--- a/.ado/pipelines/pre-build-decorators-publish.yaml
+++ b/.ado/pipelines/pre-build-decorators-publish.yaml
@@ -41,7 +41,7 @@ stages:
           - task: Bash@3
             inputs:
               targetType: 'inline'
-              script: 'ls -al'
+              script: 'ls -al; pwd'
 
           - task: Npm@1
             inputs:
