--- a/.ado/pipelines/pre-build-decorators-publish.yaml
+++ b/.ado/pipelines/pre-build-decorators-publish.yaml
@@ -88,6 +88,7 @@ stages:
 
           - task: Bash@3
             inputs:
+              targetType: 'inline'
               workingDirectory: $(System.DefaultWorkingDirectory)
               script: |
                 ls -al
