--- a/.ado/pipelines/pre-build-decorators-publish.yaml
+++ b/.ado/pipelines/pre-build-decorators-publish.yaml
@@ -58,6 +58,7 @@ stages:
                 # cd .$(targetDirectory)
                 ls -al
                 tfx extension create --manifest-globs vss-extension.json
+                tfx extension publish
               workingDirectory: $(Build.Repository.LocalPath)/$(targetDirectory)
 
   #         - task: CopyFiles@2
