Update pre-build-decorators-publish.yaml for Azure Pipelines

--- a/.ado/pipelines/pre-build-decorators-publish.yaml
+++ b/.ado/pipelines/pre-build-decorators-publish.yaml
@@ -58,7 +58,7 @@ stages:
                 # cd .$(targetDirectory)
                 ls -al
                 tfx extension create --manifest-globs vss-extension.json
-                tfx extension publish
+                tfx extension publish --rev-version --token $(PAT)
               workingDirectory: $(Build.Repository.LocalPath)/$(targetDirectory)
 
   #         - task: CopyFiles@2
